Updated for width issues on mobile.

--- a/src/asset/less/main.less
+++ b/src/asset/less/main.less
@@ -25,6 +25,7 @@ footer {
     color: @silver;
     font-size: 0.8rem;
     line-height: 1.5;
+    width: 100%;
 
     a {
         &:link,
@@ -71,6 +72,7 @@ footer {
 
 #brand-marquee {
     border-bottom: 0.45rem solid #ff0000;
+    width: 100%;
 }
 
 #spectacles-marquee {
@@ -78,4 +80,5 @@ footer {
     font-size: 15rem;
     font-weight: 500;
     color: #ccc;
+    width: 100%;
 }
